Implemented /namespace endpoint - Improved /exactmatches while I was at it, now you can search   both by local and foreign curies - Wrote fix_curies.py cli script, which loads the node set and   ensures that all the curie prefixes are valid - Changed JsonEncoder so that sets are json serializable as lists
