# beacon/swagger_server/controllers/metadata_controller.py
@@ -4,6 +4,7 @@ import six
 from swagger_server.models.beacon_concept_category import BeaconConceptCategory  # noqa: E501
 from swagger_server.models.beacon_knowledge_map_statement import BeaconKnowledgeMapStatement  # noqa: E501
 from swagger_server.models.beacon_predicate import BeaconPredicate  # noqa: E501
+from swagger_server.models.local_namespace import LocalNamespace  # noqa: E501
 from swagger_server import util
 
 import beacon_controller
@@ -28,6 +29,17 @@ def get_knowledge_map():  # noqa: E501
     :rtype: List[BeaconKnowledgeMapStatement]
     """
     return beacon_controller.get_knowledge_map()
+
+
+def get_namespaces():  # noqa: E501
+    """get_namespaces
+
+    Get a list of namespace (curie prefixes) mappings that this beacon can perform with its /exactmatches endpoint  # noqa: E501
+
+
+    :rtype: List[LocalNamespace]
+    """
+    return beacon_controller.get_namespaces()
 
 
 def get_predicates():  # noqa: E501
