# beacon/swagger_server/models/namespace.py
@@ -1,0 +1,94 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Namespace(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, prefix: str=None, uri: str=None):  # noqa: E501
+        """Namespace - a model defined in Swagger
+
+        :param prefix: The prefix of this Namespace.  # noqa: E501
+        :type prefix: str
+        :param uri: The uri of this Namespace.  # noqa: E501
+        :type uri: str
+        """
+        self.swagger_types = {
+            'prefix': str,
+            'uri': str
+        }
+
+        self.attribute_map = {
+            'prefix': 'prefix',
+            'uri': 'uri'
+        }
+
+        self._prefix = prefix
+        self._uri = uri
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Namespace':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Namespace of this Namespace.  # noqa: E501
+        :rtype: Namespace
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def prefix(self) -> str:
+        """Gets the prefix of this Namespace.
+
+        a CURIE prefix for which there are clique mappings available in the /exactmatches endpoint  # noqa: E501
+
+        :return: The prefix of this Namespace.
+        :rtype: str
+        """
+        return self._prefix
+
+    @prefix.setter
+    def prefix(self, prefix: str):
+        """Sets the prefix of this Namespace.
+
+        a CURIE prefix for which there are clique mappings available in the /exactmatches endpoint  # noqa: E501
+
+        :param prefix: The prefix of this Namespace.
+        :type prefix: str
+        """
+
+        self._prefix = prefix
+
+    @property
+    def uri(self) -> str:
+        """Gets the uri of this Namespace.
+
+        the expansion of the CURIE prefix  # noqa: E501
+
+        :return: The uri of this Namespace.
+        :rtype: str
+        """
+        return self._uri
+
+    @uri.setter
+    def uri(self, uri: str):
+        """Sets the uri of this Namespace.
+
+        the expansion of the CURIE prefix  # noqa: E501
+
+        :param uri: The uri of this Namespace.
+        :type uri: str
+        """
+
+        self._uri = uri
