# beacon_controller/__init__.py
@@ -5,4 +5,4 @@ from . import biolink_model
 from .controllers.main_controller import main
 from .controllers.concepts_controller import get_concept_details, get_concepts, get_exact_matches_to_concept_list
 from .controllers.statements_controller import get_statement_details, get_statements
-from .controllers.metadata_controller import get_concept_categories, get_knowledge_map, get_predicates
+from .controllers.metadata_controller import get_concept_categories, get_knowledge_map, get_predicates, get_namespaces
